[CONNECTOR] rewrite sink connector by java 17 toList (#1754)